# torch-deep-learning-specialization

./: README.md  pyproject.toml
C1_Neural_Networks_and_Deep Learning/W2_Logistic_Regression_with_a_Neural_Network_mindset/: Logistic_Regression_with_a_Neural_Network_mindset.ipynb  lr_utils.py
C1_Neural_Networks_and_Deep Learning/W3_Planar_data_classification_with_one_hidden_layer/: Planar_data_classification_with_one_hidden_layer.ipynb
C1_Neural_Networks_and_Deep Learning/W4_A1_Deep_Neural_Network_Application/: Deep Neural Network - Application.ipynb  dnn_utils.py
C3_Convolutional_Neural_Networks/W1_A2_Convolutional_Neural_Networks_Application/: cnn_utils.py  convolution_model_application.ipynb
C5_Sequence_Models/W4_A1_Transformer_Subclass_v1/: C5_W4_A1_Transformer_Subclass_v1.ipynb
