[tool.poetry]
name = "dl-spec-torch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "2.1.2"
torchvision = "0.16.2"
pandas = "2.1.4"
numpy = "1.26.2"
matplotlib = "3.8.2"
scipy = "1.11.4"
pillow = "10.1.0"
h5py = "3.10.0"
scikit-learn = "1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.27.1"
ruff = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
